# fastgltf

./: meson.build
src/: base64.cpp  fastgltf.cpp  io.cpp  meson.build
